welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:47: error: value Blue is not a member of object java.awt.Color
			faireFleur(Color.Blue);
                                         ^